Match native composer interactions